remove unused stuff - install java - install fedora - install elasticsearch - dns.sh related stuff